--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe Journal</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -13,19 +13,16 @@
                 <h1>My Recipe Journal</h1>
             </div>
             <nav>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Recipes</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
+                <div class="search-container">
+                    <input type="text" id="search-bar" placeholder="Search recipes..." onkeyup="searchRecipes()">
+                </div>
             </nav>
         </div>
     </header>
     <div class="container">
         <div class="recipe-list">
             <h2>Recipes</h2>
-            <ul>
+            <ul id="recipe-list">
                 <li><a href="recipes/apple_pie.html">Apple Pie</a></li>
                 <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
                 <li><a href="recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a></li>
@@ -35,5 +32,6 @@
             </ul>
         </div>
     </div>
+    <script src="js/searchRecipes.js"></script>
 </body>
 </html>
