[ADD] - Lentils Soup recipe

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
             <h2>Recipes</h2>
             <ul id="recipe-list">
                 <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
-                <li><a href="recipes/chocolate_chip_cookies.html">Chocolate Chip Cookies</a></li>
-                <li><a href="recipes/lemon_cake.html">Lemon Cake</a></li>
-                <li><a href="recipes/spaghetti_carbonara.html">Spaghetti Carbonara</a></li>
+                <li><a href="recipes/lentils_soup.html">Lentils Soup</a></li>
                 <!-- Add more recipes here -->
             </ul>
         </div>
