[ADD] - Rice Pudding recipe

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <ul id="recipe-list">
                 <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
                 <li><a href="recipes/lentils_soup.html">Lentils Soup</a></li>
+                <li><a href="recipes/rice_pudding.html">Rice Pudding</a></li>
                 <!-- Add more recipes here -->
             </ul>
         </div>
