[ADD] - Moussake recipe

--- a/index.html
+++ b/index.html
@@ -21,10 +21,17 @@
     </header>
     <div class="container">
         <div class="recipe-list">
-            <h2>Recipes</h2>
-            <ul id="recipe-list">
-                <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
+            <h2>Main Courses</h2>
+            <ul id="main-courses-list">
                 <li><a href="recipes/lentils_soup.html">Lentils Soup</a></li>
+                <li><a href="recipes/moussaka.html">Moussaka</a></li>
+                <!-- Add more recipes here -->
+            </ul>
+        </div>
+        <div class="recipe-list">
+            <h2>Desserts</h2>
+            <ul id="dessert-list">
+                <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
                 <li><a href="recipes/rice_pudding.html">Rice Pudding</a></li>
                 <!-- Add more recipes here -->
             </ul>
