[FIX] - Mousaka recipe file name typo

--- a/recipes/moussaka.html
+++ b/recipes/moussaka.html
@@ -21,7 +21,7 @@
     </header>
     <div class="container">
         <div class="recipe">
-            <h2>Musaka</h2>
+            <h2>Moussaka</h2>
             <img src="../images/moussaka.jpg" alt="Recipe Photo">
             <h3>Ingredients:</h3>
             <ul>
