[ADD] - Chocolate truffles recipe

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h2>Desserts</h2>
             <ul id="dessert-list">
                 <li><a href="recipes/banana_bread.html">Banana Bread</a></li>
+                <li><a href="recipes/chocolate_truffles.html">Chocolate Truffles</a></li>
                 <li><a href="recipes/rice_pudding.html">Rice Pudding</a></li>
                 <!-- Add more recipes here -->
             </ul>
