--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="recipe-list">
             <h2>Main Courses</h2>
             <ul id="main-courses-list">
+                <li><a href="recipes/bourguignon.html">Seitan Bourguignon</a></li>
                 <li><a href="recipes/lentils_soup.html">Lentils Soup</a></li>
                 <li><a href="recipes/moussaka.html">Moussaka</a></li>
                 <!-- Add more recipes here -->
