[ADD] - Implement .htaccess for compression and caching, optimize images, and minify CSS/JS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Recipe Journal</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.min.css">
 </head>
 <body>
     <header>
@@ -39,6 +39,7 @@
             </ul>
         </div>
     </div>
-    <script src="js/searchRecipes.js"></script>
+    <script src="js/searchRecipes.min.js"></script>
+    <script src="js/lazyLoad.js"></script>
 </body>
 </html>
