--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banana Bread</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/styles.min.css">
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="recipe">
             <h2>Banana Bread</h2>
-            <img src="../images/banana_bread.jpg" alt="Recipe Photo">
+            <img src="../images/optimized/banana_bread.webp" alt="Banana Bread Recipe" loading="lazy">
             <h3>Ingredients:</h3>
             <ul>
                 <li>4 medium ripe bananas</li>
