--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -14,7 +14,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html">← Back to Recipes</a></li>
                 </ul>
             </nav>
         </div>
