[ADD] - Introduce breadcrumbs and category filters for enhanced navigation; add quick navigation menu; update search functionality; include navigation script in recipe pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <h1>My Recipe Journal</h1>
             </div>
             <div class="search-container">
-                <input type="text" id="search-bar" placeholder="Search recipes..." onkeyup="searchRecipes()">
+                <input type="text" id="search-bar" placeholder="Search recipes...">
             </div>
         </div>
     </header>
@@ -41,5 +41,6 @@
     </div>
     <script src="js/searchRecipes.min.js"></script>
     <script src="js/lazyLoad.js"></script>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
