--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </div>
     <script src="js/searchRecipes.min.js"></script>
-    <script src="js/lazyLoad.js"></script>
-    <script src="js/navigation.js"></script>
+    <script src="js/lazyLoad.min.js"></script>
+    <script src="js/navigation.min.js"></script>
 </body>
 </html>
