--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -44,6 +44,6 @@
             </ol>
         </div>
     </div>
-    <script src="../js/navigation.js"></script>
+    <script src="../js/navigation.min.js"></script>
 </body>
 </html>
