--- a/index.html
+++ b/index.html
@@ -9,11 +9,33 @@
 <body>
     <header>
         <div class="container">
-            <div id="branding">
-                <h1>My Recipe Journal</h1>
+            <div class="header-content">
+                <div id="branding">
+                    <h1 data-i18n="my_recipe_journal">My Recipe Journal</h1>
+                </div>
+                <div class="search-container">
+                    <input type="text" id="search-bar" placeholder="Search recipes..." data-i18n="search_placeholder">
+                </div>
             </div>
-            <div class="search-container">
-                <input type="text" id="search-bar" placeholder="Search recipes...">
+            <!-- Language Switcher - Outside the main content flow -->
+            <div class="language-switcher">
+                <button id="language-toggle" class="language-toggle" aria-label="Change language">
+                    <span class="current-lang">English</span>
+                    <span class="toggle-icon">🌍</span>
+                </button>
+                <div id="language-menu" class="language-menu">
+                    <button class="lang-option active" data-lang="en">English</button>
+                    <button class="lang-option" data-lang="fr">Français</button>
+                    <button class="lang-option" data-lang="es">Español</button>
+                    <button class="lang-option" data-lang="de">Deutsch</button>
+                    <button class="lang-option" data-lang="it">Italiano</button>
+                    <button class="lang-option" data-lang="pt">Português</button>
+                    <button class="lang-option" data-lang="nl">Nederlands</button>
+                    <button class="lang-option" data-lang="ru">Русский</button>
+                    <button class="lang-option" data-lang="zh">中文</button>
+                    <button class="lang-option" data-lang="ja">日本語</button>
+                    <button class="lang-option" data-lang="ko">한국어</button>
+                </div>
             </div>
         </div>
     </header>
@@ -22,6 +44,8 @@
             <!-- Recipes will be loaded dynamically from data/recipes.json -->
         </div>
     </div>
+    <script src="js/languageSwitcher.min.js"></script>
+    <script src="js/i18n.min.js"></script>
     <script src="js/recipeLoader.min.js"></script>
     <script src="js/searchRecipes.min.js"></script>
     <script src="js/lazyLoad.min.js"></script>
