--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>My Recipe Journal</title>
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="css/styles.min.css?nocache=true">
 </head>
 <body>
     <header>
@@ -27,19 +30,14 @@
             </div>
         </div>
     </header>
-    <div class="main-content">
-        <!-- Recipes will be loaded dynamically from data/recipes.json -->
-    </div>
+    <!-- Recipes will be loaded dynamically from data/recipes.json -->
     
-
-
-    
-    <script src="js/scalableTranslator.min.js"></script>
-    <script src="js/languageMenuLoader.min.js"></script>
+    <!-- <script src="js/scalableTranslator.min.js"></script> -->
+    <!-- <script src="js/languageMenuLoader.min.js"></script> -->
     <script src="js/recipeLoader.min.js"></script>
-    <script src="js/searchRecipes.min.js"></script>
-    <script src="js/lazyLoad.min.js"></script>
-    <script src="js/navigation.min.js"></script>
-    <script src="js/simpleLanguageSwitcher.min.js"></script>
-</body>
-</html>
+    <!-- <script src="js/searchRecipes.min.js"></script> -->
+    <!-- <script src="js/lazyLoad.min.js"></script> -->
+    <!-- <script src="js/navigation.min.js"></script> -->
+    <!-- <script src="js/simpleLanguageSwitcher.min.js"></script> -->
+  </body>
+  </html>
