--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>My Recipe Journal</title>
     <link rel="stylesheet" href="css/styles.min.css?nocache=true">
+    <link rel="stylesheet" href="css/button-styles.css?nocache=true">
 </head>
 <body>
     <header>
