[REMOVE] - Remove translation and language management files, including JSON and JavaScript components; update index.html to reflect changes in recipe data loading structure.

--- a/index.html
+++ b/index.html
@@ -31,14 +31,8 @@
             </div>
         </div>
     </header>
-    <!-- Recipes will be loaded dynamically from data/recipes.json -->
+    <!-- Recipes will be loaded dynamically from data/cookbook-data-*.json -->
     
-    <!-- <script src="js/scalableTranslator.min.js"></script> -->
-    <!-- <script src="js/languageMenuLoader.min.js"></script> -->
     <script src="js/recipeLoader.min.js"></script>
-    <!-- <script src="js/searchRecipes.min.js"></script> -->
-    <!-- <script src="js/lazyLoad.min.js"></script> -->
-    <!-- <script src="js/navigation.min.js"></script> -->
-    <!-- <script src="js/simpleLanguageSwitcher.min.js"></script> -->
   </body>
   </html>
