[UPDATE] - Integrate main stylesheet for consistent styling across pages; refactor language switcher structure in index.html and recipe-template.html for improved layout and user experience.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>My Recipe Journal</title>
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -17,15 +18,14 @@
             <div class="search-container">
                 <input type="text" id="search-bar" placeholder="Search recipes..." data-i18n="search_placeholder">
             </div>
-        </div>
-        <!-- Language Switcher - Outside the main content flow -->
-        <div class="language-switcher">
-            <button class="language-toggle" id="language-toggle">
-                <span class="current-lang">English</span>
-                <span class="toggle-icon">🌍</span>
-            </button>
-            <div class="language-menu" id="language-menu">
-                <!-- Language options will be loaded dynamically -->
+            <div class="language-switcher">
+                <button class="language-toggle" id="language-toggle">
+                    <span class="current-lang">English</span>
+                    <span class="toggle-icon">🌍</span>
+                </button>
+                <div class="language-menu" id="language-menu">
+                    <!-- Language options will be loaded dynamically -->
+                </div>
             </div>
         </div>
     </header>
