--- a/recipe-template.html
+++ b/recipe-template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe</title>
-    <link rel="stylesheet" href="css/styles.min.css?nocache=true">
-    <link rel="stylesheet" href="css/button-styles.css?nocache=true">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/button-styles.css">
 </head>
 <body>
     <header>
@@ -13,16 +13,13 @@
             <div id="branding">
                 <h1 data-i18n="my_recipe_journal">My Recipe Journal</h1>
             </div>
+            <div class="language-switcher">
+                <button class="language-toggle" id="language-toggle">
+                    <span class="current-lang">English</span>
+                    <span class="toggle-icon">🌍</span>
+                </button>
+            </div>
         </div>
-        <div class="language-switcher">
-            <button class="language-toggle" id="language-toggle">
-                <span class="current-lang">English</span>
-                <span class="toggle-icon">🌍</span>
-            </button>
-        </div>
-        <nav>
-            <a href="index.html">← Back to Home</a>
-        </nav>
     </header>
     
     <div class="container">
