[UPDATE] - Enhance internationalization support by adding data attributes for dish types and dietary options in index.html; update RecipeLoader.js to dynamically set section headers and button texts based on localization data.

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
     <div class="filter-bar">
         <div class="filter-content">
             <div class="filter-section">
-                <h3>Dish Types</h3>
+                <h3 data-i18n="dish_types">Dish Types</h3>
                 <div class="filter-buttons">
-                    <button class="filter-btn" data-filter="all" data-type="dish">All</button>
-                    <button class="filter-btn" data-filter="main_courses" data-type="dish">Main Courses</button>
-                    <button class="filter-btn" data-filter="desserts" data-type="dish">Desserts</button>
-                    <button class="filter-btn" data-filter="soups" data-type="dish">Soups</button>
+                    <button class="filter-btn" data-filter="all" data-type="dish" data-i18n="all">All</button>
+                    <button class="filter-btn" data-filter="main_courses" data-type="dish" data-i18n="main_courses">Main Courses</button>
+                    <button class="filter-btn" data-filter="desserts" data-type="dish" data-i18n="desserts">Desserts</button>
+                    <button class="filter-btn" data-filter="soups" data-type="dish" data-i18n="soups">Soups</button>
                 </div>
             </div>
             <div class="filter-section">
-                <h3>Dietary Options</h3>
+                <h3 data-i18n="dietary_options">Dietary Options</h3>
                 <div class="filter-buttons">
-                    <button class="filter-btn" data-filter="vegan">Vegan</button>
-                    <button class="filter-btn" data-filter="gluten_free">Gluten-Free</button>
+                    <button class="filter-btn" data-filter="vegan" data-i18n="vegan">Vegan</button>
+                    <button class="filter-btn" data-filter="gluten_free" data-i18n="gluten_free">Gluten-Free</button>
                 </div>
             </div>
         </div>
